2007-12-13  Masami Hiramatsu  <mhiramat@redhat.com>

	* stap.1.in: Document about relay buffer sharing.
	* NEWS: Document about relay buffer sharing and staplog crash extension.

2007-12-12  Wenji Huang <wenji.huang@oracle.com>

        PR 5470
        * parse.cxx (parser::parse_probe_point): Add checking pointer t.

2007-12-11  Frank Ch. Eigler  <fche@elastic.org>

	* staptree.cxx, staptree.h: More GCC 4.3 build fixes from
	Eugeniy Meshcheryakov <eugen@debian.org>.

2007-12-05  William Cohen  <wcohen@redhat.com>

	* systemtap.spec.in: Correct Source to point to location contain code.

2007-12-05  Masami Hiramatsu  <mhiramat@redhat.com>

	PR 4935
	* tapsets.cxx (dwarf_derived_probe::dwarf_derived_probe): Allow user
	to access kernel variables in the condition of probe points.
	* stapprobes.5.in : Document the conditional probe point.
	* NEWS : Ditto.

2007-12-03  Masami Hiramatsu  <mhiramat@redhat.com>

	PR 5376
	* parse.cxx (lexer::scan): Treat '*' as an alphabet if the wildcard
	flag is true.
	(parser::parse_probe_point): Call parser::next() with wildcard = true.
	(parser::scan_pp): Add wildcard flag and pass it to lexer::scan.
	(parser::next): Ditto.
	(parser::peek): Ditto.
	* parse.h : Ditto.

2007-12-01  Frank Ch. Eigler  <fche@elastic.org>

	* gen-stapmark.h, stapmark.h: Retire.

2007-11-29  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (mark_derived_probe::initialize_probe_context_vars):
	Handles the case where one marker has more than one string
	argument.

2007-11-27  David Smith  <dsmith@redhat.com>

	PR 5377.
	* elaborate.cxx (match_node::find_and_build): Handle wildcards in
	probe points correctly.

2007-11-26  Frank Ch. Eigler  <fche@elastic.org>

	* elaborate.cxx (derived_probe ctor): Don't duplicate condition
	if it doesn't exist.
	* staptree.cxx (probe_point, probe ctors): Initialize to 0.

2007-11-20  Masami Hiramatsu  <mhiramat@redhat.com>

	PR 4935.
	* parse.cxx (parser::parse_probe_point): Parse "if" condition
	following probe point.